--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "classnames": "^2.2.5",
     "react-redux": "^5.0.4",
     "react-scripts": "^1.0.0",
     "redux": "^3.6.0",
