--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-scripts": "^1.0.14",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6"
-  }
+  },
+  "repository": "git@github.com:stuartkeith/micthing.git",
+  "author": "Stuart Keith <stuart@stuartkeith.com>",
+  "license": "MIT"
 }
