update dependencies and remove yarn

--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "react-redux": "^5.0.7",
-    "react-scripts": "^1.1.4",
-    "redux": "^3.7.2",
+    "react-scripts": "^2.0.5",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6"
   },
   "repository": "git@github.com:stuartkeith/micthing.git",
   "author": "Stuart Keith <stuart@stuartkeith.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
