--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
+    "jest-dom": "^3.1.3",
     "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
+    "react-testing-library": "^6.0.3",
+    "rebound": "^0.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6"
   },
